--- a/index.html
+++ b/index.html
@@ -7,44 +7,83 @@
     <style>
         #map {
             height: 600px;
-            width: 70%;
+            width: 60%;
             margin-left: 0;
-            display: inline-block;
         }
-        #info-box {
-            height: 600px;
-            width: 28%;
-            display: inline-block;
-            vertical-align: top;
+        #info-box-container {
+            position: absolute;
+            top: 60px;
+            right: 300px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+        .info-box {
+            width: 250px;
+            background-color: #f9f9f9;
             border: 1px solid #ccc;
             padding: 10px;
             font-family: Arial, sans-serif;
-            overflow-y: auto;
-            background-color: #f9f9f9;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
-        #info-box strong {
+        .info-box strong {
             font-size: 16px;
             display: block;
             margin-bottom: 5px;
-            text-align: center; /* Center-aligned */
+            text-align: center;
         }
-        #info-box span {
+        .info-box span {
             color: #555;
         }
         #slider-container {
-            text-align: center;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            width: 250px;
+            background: #f9f9f9;
+            border: 1px solid #ccc;
+            padding: 15px;
+            font-family: Arial, sans-serif;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        #slider-container label {
+            display: block;
             margin-top: 10px;
         }
-        #slider-value {
-            margin-left: 10px;
+        #select-all-btn {
+            margin-bottom: 10px;
+            padding: 8px 16px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-family: Arial, sans-serif;
+        }
+        #select-all-btn:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
     <div id="map"></div>
-    <div id="info-box">
-        <strong>Region Information</strong>
-        <span>Click on a region to see details.</span>
+    <div id="info-box-container"></div>
+    <div id="slider-container">
+        <button id="select-all-btn">Select All</button>
+        <label for="temperature-slider">Temperature:</label>
+        <input type="range" id="temperature-slider" min="0" max="20" value="0" />
+        <span id="temperature-value">+0<span>&#176;</span>C</span>
+
+        <label for="humidity-slider">Humidity:</label>
+        <input type="range" id="humidity-slider" min="0" max="100" value="50" />
+        <span id="humidity-value">50%</span>
+
+        <label for="wind-speed-slider">Wind Speed:</label>
+        <input type="range" id="wind-speed-slider" min="0" max="50" value="10" />
+        <span id="wind-speed-value">10 km/h</span>
+
+        <label for="precipitation-slider">Precipitation:</label>
+        <input type="range" id="precipitation-slider" min="0" max="200" value="0" />
+        <span id="precipitation-value">0 mm</span>
     </div>
 
     <script>
@@ -54,10 +93,10 @@
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CartoDB</a>'
         }).addTo(map);
 
-        let selectedLayer = null;
-        let originalColor = null; // Store the original color
+        const highlightedDistricts = new Map(); // Store highlighted districts and their original colors
+        const infoBoxContainer = document.getElementById('info-box-container');
+        const selectAllBtn = document.getElementById('select-all-btn');
 
-        // Default style for all regions to be silver initially
         const defaultStyle = {
             fillColor: 'silver',
             weight: 2,
@@ -66,109 +105,127 @@
             fillOpacity: 0.7
         };
 
-        // Add GeoJSON layer with all regions initially set to silver
+        const highlightedStyle = {
+            fillColor: 'yellow',
+            weight: 3,
+            color: 'black',
+            fillOpacity: 0.9
+        };
+
+        let geoJsonLayer; // Reference to the GeoJSON layer
+
         fetch('germany_new.geojson')
             .then(response => response.json())
             .then(data => {
-                L.geoJSON(data, {
-                    style: defaultStyle,  // Apply default silver color to all regions
+                geoJsonLayer = L.geoJSON(data, {
+                    style: defaultStyle,
                     onEachFeature: function (feature, layer) {
                         layer.on('click', function () {
-                            // Restore the original color of the previously selected region
-                            if (selectedLayer) {
-                                selectedLayer.setStyle({
-                                    fillColor: originalColor,
-                                    weight: 2,
-                                    opacity: 1,
-                                    color: 'white',
-                                    fillOpacity: 0.7
-                                });
-                            }
-
-                            // Store the selected layer and its original color
-                            selectedLayer = layer;
-                            originalColor = layer.options.fillColor || 'silver'; // Store original color
-
-                            // Update the info box with sliders
-                            const name = feature.properties.krs_name || "Unknown Region";
-                            const code = feature.properties.krs_code || "No Code Available";
-                            const infoBox = document.getElementById('info-box');
-                            infoBox.innerHTML = `
-                                <strong>${name}</strong>
-                                <span>KRS Code: ${code}</span>
-                                <br><label for="temperature-slider">Temperature: </label>
-                                <input type="range" id="temperature-slider" min="0" max="20" value="0" />
-                                <span id="temperature-value">+0<span>&#176;</span>C</span>
-                                <br><label for="humidity-slider">Humidity: </label>
-                                <input type="range" id="humidity-slider" min="0" max="100" value="50" />
-                                <span id="humidity-value">50%</span>
-                                <br><label for="wind-speed-slider">Wind Speed: </label>
-                                <input type="range" id="wind-speed-slider" min="0" max="50" value="10" />
-                                <span id="wind-speed-value">10 km/h</span>
-                                <br><label for="precipitation-slider">Precipitation: </label>
-                                <input type="range" id="precipitation-slider" min="0" max="200" value="0" />
-                                <span id="precipitation-value">0 mm</span>
-                            `;
-
-                            // Reset all slider values and colors
-                            const sliders = {
-                                temperature: document.getElementById('temperature-slider'),
-                                humidity: document.getElementById('humidity-slider'),
-                                windSpeed: document.getElementById('wind-speed-slider'),
-                                precipitation: document.getElementById('precipitation-slider')
-                            };
-
-                            // Update region color based on initial values
-                            updateRegionColor(sliders);
-
-                            // Attach event listeners for sliders
-                            sliders.temperature.addEventListener('input', function () {
-                                document.getElementById('temperature-value').textContent = `+${this.value}${String.fromCharCode(176)}C`;
-                                updateRegionColor(sliders);
-                            });
-                            sliders.humidity.addEventListener('input', function () {
-                                document.getElementById('humidity-value').textContent = `${this.value}%`;
-                                updateRegionColor(sliders);
-                            });
-                            sliders.windSpeed.addEventListener('input', function () {
-                                document.getElementById('wind-speed-value').textContent = `${this.value} km/h`;
-                                updateRegionColor(sliders);
-                            });
-                            sliders.precipitation.addEventListener('input', function () {
-                                document.getElementById('precipitation-value').textContent = `${this.value} mm`;
-                                updateRegionColor(sliders);
-                            });
+                            toggleDistrictHighlight(layer, feature);
                         });
                     }
                 }).addTo(map);
+
+                // Crop everything outside Germany
+                cropOutsideGermany(data);
             });
 
-        // Function to change the region color based on all sliders
-        function updateRegionColor(sliders) {
-            const temperature = sliders.temperature.value;
-            const humidity = sliders.humidity.value;
-            const windSpeed = sliders.windSpeed.value;
-            const precipitation = sliders.precipitation.value;
+        function toggleDistrictHighlight(layer, feature) {
+            const name = feature.properties.krs_name || "Unknown Region";
+            const code = feature.properties.krs_code || "No Code Available";
 
-            const color = getColorForProperties(temperature, humidity, windSpeed, precipitation);
-            selectedLayer.setStyle({
-                fillColor: color,
-                weight: 2,
-                opacity: 1,
-                color: 'white',
-                fillOpacity: 0.7
+            if (highlightedDistricts.has(layer)) {
+                // Remove highlight and info
+                layer.setStyle({
+                    fillColor: highlightedDistricts.get(layer),
+                    weight: 2,
+                    opacity: 1,
+                    color: 'white',
+                    fillOpacity: 0.7
+                });
+                highlightedDistricts.delete(layer);
+                removeDistrictInfo(name);
+            } else {
+                // Highlight and add info
+                highlightedDistricts.set(layer, layer.options.fillColor || 'silver');
+                layer.setStyle(highlightedStyle);
+                addDistrictInfo(name, code);
+            }
+        }
+
+        function addDistrictInfo(name, code) {
+            const existingInfo = document.getElementById(`info-${name}`);
+            if (!existingInfo) {
+                const infoDiv = document.createElement('div');
+                infoDiv.id = `info-${name}`;
+                infoDiv.className = 'info-box';
+                infoDiv.innerHTML = `
+                    <strong>${name}</strong>
+                    <span>KRS Code: ${code}</span>
+                `;
+                infoBoxContainer.appendChild(infoDiv);
+            }
+        }
+
+        function removeDistrictInfo(name) {
+            const infoDiv = document.getElementById(`info-${name}`);
+            if (infoDiv) {
+                infoBoxContainer.removeChild(infoDiv);
+            }
+        }
+
+        // Crop functionality
+        function cropOutsideGermany(geoJsonData) {
+            const worldBounds = [[-90, -180], [90, 180]]; // Full world bounds
+            const germanyMask = L.geoJSON(geoJsonData);
+
+            const mask = L.polygon([
+                [worldBounds[0][0], worldBounds[0][1]], // Bottom-left
+                [worldBounds[0][0], worldBounds[1][1]], // Bottom-right
+                [worldBounds[1][0], worldBounds[1][1]], // Top-right
+                [worldBounds[1][0], worldBounds[0][1]], // Top-left
+                [worldBounds[0][0], worldBounds[0][1]], // Back to Bottom-left
+            ], {
+                color: 'black',
+                fillColor: 'black',
+                fillOpacity: 0.8,
+                interactive: false,
+            }).addTo(map);
+
+            map.fitBounds(germanyMask.getBounds()); // Zoom to Germany
+            map.addLayer(mask);
+            mask.bringToBack(); // Ensure mask is below the Germany layer
+        }
+
+        // Select All functionality
+        selectAllBtn.addEventListener('click', function () {
+            geoJsonLayer.eachLayer(function (layer) {
+                const feature = layer.feature;
+                if (!highlightedDistricts.has(layer)) {
+                    toggleDistrictHighlight(layer, feature);
+                }
             });
-        }
+        });
 
-        // Function to calculate color based on the property values
-        function getColorForProperties(temperature, humidity, windSpeed, precipitation) {
-            const tempColor = Math.min(255, Math.floor(255 * (temperature / 20)));
-            const humidityColor = Math.min(255, Math.floor(255 * (humidity / 100)));
-            const windColor = Math.min(255, Math.floor(255 * (windSpeed / 50)));
-            const precipColor = Math.min(255, Math.floor(255 * (precipitation / 200)));
+        // Slider handling (unchanged from previous version)
+        const sliders = {
+            temperature: document.getElementById('temperature-slider'),
+            humidity: document.getElementById('humidity-slider'),
+            windSpeed: document.getElementById('wind-speed-slider'),
+            precipitation: document.getElementById('precipitation-slider')
+        };
 
-            return `rgb(${tempColor}, ${humidityColor}, ${windColor})`; // RGB with varying red, green, blue
-        }
+        Object.keys(sliders).forEach(key => {
+            sliders[key].addEventListener('input', function () {
+                document.getElementById(`${key}-value`).textContent = key === 'temperature'
+                    ? `+${this.value}${String.fromCharCode(176)}C`
+                    : key === 'humidity'
+                    ? `${this.value}%`
+                    : key === 'windSpeed'
+                    ? `${this.value} km/h`
+                    : `${this.value} mm`;
+            });
+        });
     </script>
 </body>
 </html>
