--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
             max-width: 200px; /* Limit width for compactness */
             z-index: 1000; /* Ensure it's above other elements */
         }
+        #district-dropdown {
+            max-height: 150px; /* Limit the height */
+            overflow-y: auto;  /* Enable vertical scrolling */
+            width: 200px;      /* Adjust width if necessary */
+            font-family: Arial, sans-serif;
+            font-size: 14px;
+            padding: 5px;
+        }
 
         .info-box {
             padding: 8px;
