--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         <button id="deselect-all-btn">Deselect All</button>
 
         <label for="temperature-slider">Temperature:</label>
-        <input type="range" id="temperature-slider" min="5" max="30" value="10" />
-        <span id="temperature-value">11C</span>
+        <input type="range" id="temperature-slider" min="5" max="30" value="12" />
+        <span id="temperature-value">12&degC</span>
 
         <label for="humidity-slider">Humidity</label>
         <input type="range" id="humidity-slider" min="0" max="100" value="20" />
@@ -111,7 +111,7 @@
 
         <label for="radiation-slider">Solar Radiation:</label>
         <input type="range" id="radiation-slider" min="0" max="50" value="5" />
-        <span id="radiation-value">5 W/m2</span>
+        <span id="radiation-value">5 W/m<sup>2</sup></span>
 
         <label for="district-dropdown">Select District:</label>
         <select id="district-dropdown">
